[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "scinum"
description = "Scientific numbers with multiple uncertainties and correlation-aware, gaussian propagation and Numpy support."
authors = [
    {name = "Marcel Rieger", email = "marcel.rieger@cern.ch"},
]
keywords = [
    "scientific",
    "numbers",
    "error",
    "systematics",
    "propagation",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]


[project.urls]

Homepage = "https://github.com/riga/scinum"
Documentation = "https://scinum.readthedocs.io"
Repository = "https://github.com/riga/scinum.git"


[tool.setuptools.dynamic]

version = {attr = "scinum.__init__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}, docs = {file = ["requirements_docs.txt"]}}


[tool.setuptools.packages.find]

include = ["scinum"]
exclude = ["tests/*"]


[tool.mypy]

disable_error_code = ["no-redef", "valid-type"]
exclude = ["tests", "build", "docs"]
